[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/LOD_trigger_zone.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=79]

[node name="LOD_trigger_zone" type="Spatial"]
script = ExtResource( 1 )

[node name="Do not rename or edit the shape or area nodes" type="Node" parent="."]

[node name="Put scenes into Scene Items nodes" type="Node" parent="."]

[node name="LOD0" type="Area" parent="."]
input_ray_pickable = false
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0

[node name="Shape" type="CollisionShape" parent="LOD0"]
shape = SubResource( 79 )

[node name="Scene_items" type="Spatial" parent="LOD0"]

[node name="LOD1" type="Area" parent="."]
input_ray_pickable = false
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0

[node name="Shape" type="CollisionShape" parent="LOD1"]
shape = SubResource( 79 )

[node name="Scene_items" type="Spatial" parent="LOD1"]

[node name="LOD2" type="Area" parent="."]
input_ray_pickable = false
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0

[node name="Shape" type="CollisionShape" parent="LOD2"]
shape = SubResource( 79 )

[node name="Scene_items" type="Spatial" parent="LOD2"]

[connection signal="body_entered" from="LOD0" to="." method="_on_LOD0_body_entered"]
[connection signal="body_exited" from="LOD0" to="." method="_on_LOD0_body_exited"]
[connection signal="body_entered" from="LOD1" to="." method="_on_LOD1_body_entered"]
[connection signal="body_exited" from="LOD1" to="." method="_on_LOD1_body_exited"]
[connection signal="body_entered" from="LOD2" to="." method="_on_LOD2_body_entered"]
[connection signal="body_exited" from="LOD2" to="." method="_on_LOD2_body_exited"]
